# vvmjit

./: CMakeLists.txt  README.md  appveyor.yml  circle.yml  wercker.yml
docker/: test.sh
docs/: Doxyfile  annotated.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  evm_8h_source.html  files.html  functions.html  functions_vars.html  group__EVMC.html  index.html  modules.html  pages.html  structevm__address-members.html  structevm__address.html  structevm__context-members.html  structevm__context.html  structevm__context__fn__table-members.html  structevm__context__fn__table.html  structevm__instance-members.html  structevm__instance.html  structevm__message-members.html  structevm__message.html  structevm__result-members.html  structevm__result.html  structevm__tx__context-members.html  structevm__tx__context.html  structevm__uint256be-members.html  structevm__uint256be.html  todo.html  unionevm__result__optional__data-members.html  unionevm__result__optional__data.html
examples/: capi.c  examplevm.c
include/: evm.h  vvm.h  vvmjit.h
include/vvmjit/: JIT-c.h  JIT.h
libevmjit/: Compiler.cpp  Ext.cpp  Ext.h  JIT.cpp
libvvmjit/: Arith256.cpp  Arith256.h  Array.cpp  Array.h  BasicBlock.cpp  BasicBlock.h  BuildInfo.h.in  CMakeLists.txt  Cache.cpp  Cache.h  Common.h  Compiler.cpp  Compiler.h  CompilerHelper.cpp  CompilerHelper.h  Endianness.cpp  Endianness.h  ExecStats.cpp  ExecStats.h  Ext.cpp  Ext.h  GasMeter.cpp  GasMeter.h  Instruction.cpp  Instruction.h  JIT-c.cpp  JIT.cpp  JIT.h  Memory.cpp  Memory.h  Optimizer.cpp  Optimizer.h  RuntimeManager.cpp  RuntimeManager.h  Type.cpp  Type.h  Utils.cpp  Utils.h
scripts/: build.sh  travis_update_docs.sh
tests/: CMakeLists.txt  test-vvm.cpp  test-vvmjit-standalone.c
